# lzokay-native-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
.gihub/workflows/: CI.yml
.github/workflows/: CI.yml
src/: compress.rs  decompress.rs  lib.rs  util.rs
test-data/compressed/: alice29.txt.lzo  asyoulik.txt.lzo  cp.html.lzo  fields.c.lzo  grammar.lsp.lzo  kennedy.xls.lzo  lcet10.txt.lzo  pic.png.lzo  pic_small.png.lzo  plrabn12.txt.lzo  sum.lzo  xargs.1.lzo
