[package]
name = "lzokay-rust-native"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.30"
byteorder = { version = "1.4.3", optional = true }

[dev-dependencies]
minilzo-rs = "0.6.0"
sha1 = "0.10.5"


[features]
default = ["compress", "decompress"]
compress = []
decompress = ["byteorder"]
