[package]
name = "lzokay-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A pure rust port of lzookay."
repository = "https://github.com/arma-tools/lzokay-native-rs/"
categories = ["compression", "algorithms"]
keywords = ["lzokay", "lzo", "native", "compress", "decompress"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.30"
byteorder = { version = "1.4.3", optional = true }

[dev-dependencies]
minilzo-rs = "0.6.0"
sha1 = "0.10.5"


[features]
default = ["compress", "decompress"]
compress = []
decompress = ["byteorder"]
